--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,12 @@
     <artifactId>base-project</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
-    <name>base-project</name>
-    <description>基座项目父POM，统一管理依赖版本</description>
 
-    <!-- 子模块声明（父模块包含子模块，直接写模块名） -->
+    <name>base-project</name>
+    <description>简化版Spring Boot项目</description>
+
+    <!-- 子模块声明 -->
     <modules>
-        <module>base-common</module>
-        <module>base-system</module>
-        <module>base-file</module>
         <module>base-admin</module>
     </modules>
 
@@ -31,102 +29,7 @@
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mybatis-plus.version>3.5.6</mybatis-plus.version>
-        <knife4j.version>4.4.0</knife4j.version>
-        <hutool.version>5.8.25</hutool.version>
-        <lombok.version>1.18.30</lombok.version>
-        <jjwt.version>0.11.5</jjwt.version>
-        <mysql-connector.version>8.0.33</mysql-connector.version>
-        <aliyun-oss.version>3.15.1</aliyun-oss.version>
     </properties>
-
-    <!-- 依赖版本管理（子模块直接引用，无需写版本） -->
-    <dependencyManagement>
-        <dependencies>
-            <!-- Spring Boot核心 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-                <version>3.2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-security</artifactId>
-                <version>3.2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>3.2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-validation</artifactId>
-                <version>3.2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>3.2.0</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- MyBatis-Plus -->
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>${mybatis-plus.version}</version>
-            </dependency>
-
-            <!-- 数据库驱动 -->
-            <dependency>
-                <groupId>com.mysql</groupId>
-                <artifactId>mysql-connector-j</artifactId>
-                <version>${mysql-connector.version}</version>
-            </dependency>
-
-            <!-- 接口文档 -->
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
-                <version>${knife4j.version}</version>
-            </dependency>
-
-            <!-- 工具类 -->
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-                <optional>true</optional>
-            </dependency>
-
-            <!-- JWT -->
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-api</artifactId>
-                <version>${jjwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-impl</artifactId>
-                <version>${jjwt.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-jackson</artifactId>
-                <version>${jjwt.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-
-            <!-- 阿里云OSS -->
-            <dependency>
-                <groupId>com.aliyun.oss</groupId>
-                <artifactId>aliyun-sdk-oss</artifactId>
-                <version>${aliyun-oss.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <!-- 通用插件管理 -->
     <build>
