--- a/base-admin/src/main/resources/application.yml
+++ b/base-admin/src/main/resources/application.yml
@@ -10,3 +10,10 @@ mybatis:
   type-aliases-package: com.base.admin.entity
   configuration:
     map-underscore-to-camel-case: true
+
+# PageHelper分页配置
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
