feat:增加统一返回格式并修改原有的返回体

--- a/base-admin/pom.xml
+++ b/base-admin/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.4.6</version>
         </dependency>
+        
+        <!-- JUnit Jupiter API for writing tests -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!-- 打包配置（生成可执行JAR） -->
